// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#onAutocomplete will correctly format an API response 1`] = `
Object {
  "autocompletedResults": Array [
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "How to use this <em>dem</em>onstration?

You can discover Jahia 7 using the following users (login / password):


 root / root (if you're using the <em>Dem</em>o Pack. Otherwise, the root password is the one set using the Jahia's installation tool): Server Administrator of this Jahia instance (with access to the full",
      },
      "id": Object {
        "raw": "1bbcb33b-28b6-4db4-9d9d-77d7792d88ff",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/demo-roles-and-users.html",
      },
      "score": Object {
        "raw": 105.96808624267578,
      },
      "title": Object {
        "raw": "Demo Roles and Users",
      },
    },
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "Over time, the <em>dem</em>and became so great that the provider network grew nationwide. As the customers asked for more, it created opportunities for even small organic farmers to join the network. By going digital with their ordering and delivery systems, organic food is now delivered on-<em>dem</em>and - within 24<br/>Bill Taylor, CFO (Chief Farming Officer) of the Organi-Food Network gave up being a stockbroker to become a farmer and then  revolutionize the on-<em>dem</em>and green grocery business.  meet Bill Happytown",
      },
      "id": Object {
        "raw": "6e352fe6-da4c-4b96-bd50-64dac8114c54",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home.html",
      },
      "score": Object {
        "raw": 40.4446907043457,
      },
      "title": Object {
        "raw": "Home",
      },
    },
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "can lead to more conversations and an intangible sense of connection; in other words, movies bring people together.


With the anticipated increased <em>dem</em>and on their movie inventory, all-Movies is recommending people sign up for the films they want to see on DVD and Blue-Ray as soon as possible. By doing",
      },
      "id": Object {
        "raw": "09f5cf40-f2f7-4419-a690-db654b728ab9",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/news-entry.html",
      },
      "score": Object {
        "raw": 5.5665740966796875,
      },
      "title": Object {
        "raw": "News Entry",
      },
    },
  ],
}
`;

exports[`#onAutocomplete will not return anything for suggestions 1`] = `Object {}`;

exports[`#onAutocompleteResultClick will call the API with the correct body params 1`] = `undefined`;

exports[`#onSearch will correctly format an API response 1`] = `
Object {
  "facets": Object {
    "jgql:tags": Array [
      Object {
        "data": Array [
          Object {
            "count": 1,
            "value": "food",
          },
          Object {
            "count": 1,
            "value": "health",
          },
          Object {
            "count": 1,
            "value": "movies",
          },
        ],
      },
    ],
  },
  "requestId": "",
  "results": Array [
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "How to use this <em>dem</em>onstration?

You can discover Jahia 7 using the following users (login / password):


 root / root (if you're using the <em>Dem</em>o Pack. Otherwise, the root password is the one set using the Jahia's installation tool): Server Administrator of this Jahia instance (with access to the full",
      },
      "id": Object {
        "raw": "1bbcb33b-28b6-4db4-9d9d-77d7792d88ff",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/demo-roles-and-users.html",
      },
      "score": Object {
        "raw": 105.96808624267578,
      },
      "title": Object {
        "raw": "Demo Roles and Users",
      },
    },
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "Over time, the <em>dem</em>and became so great that the provider network grew nationwide. As the customers asked for more, it created opportunities for even small organic farmers to join the network. By going digital with their ordering and delivery systems, organic food is now delivered on-<em>dem</em>and - within 24<br/>Bill Taylor, CFO (Chief Farming Officer) of the Organi-Food Network gave up being a stockbroker to become a farmer and then  revolutionize the on-<em>dem</em>and green grocery business.  meet Bill Happytown",
      },
      "id": Object {
        "raw": "6e352fe6-da4c-4b96-bd50-64dac8114c54",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home.html",
      },
      "score": Object {
        "raw": 40.4446907043457,
      },
      "title": Object {
        "raw": "Home",
      },
    },
    Object {
      "created": Object {
        "raw": undefined,
      },
      "excerpt": Object {
        "snippet": "can lead to more conversations and an intangible sense of connection; in other words, movies bring people together.


With the anticipated increased <em>dem</em>and on their movie inventory, all-Movies is recommending people sign up for the films they want to see on DVD and Blue-Ray as soon as possible. By doing",
      },
      "id": Object {
        "raw": "09f5cf40-f2f7-4419-a690-db654b728ab9",
      },
      "link": Object {
        "raw": "http://localhost/sites/digitall/home/newsroom/news-entry.html",
      },
      "score": Object {
        "raw": 5.5665740966796875,
      },
      "title": Object {
        "raw": "News Entry",
      },
    },
  ],
  "totalPages": NaN,
  "totalResults": 3,
}
`;
